--- a/UI/loginpage.html
+++ b/UI/loginpage.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </section>
-    <script type="text/javascript" src="static/js/scripts.js"></script>
+    <script type="text/javascript" src="static/js/login.js"></script>
 </body>
 
 </html>
