Add JS script for all CRUD operations [Finishes #161959242] [Finishes #161959240]

--- a/UI/add_product.html
+++ b/UI/add_product.html
@@ -47,17 +47,17 @@
                     
                     
                 </div>
-
+                <p id="alert" style="display:none;"></p>
                 <div class="former">
-                    <form>
+                    <form id="add_product">
                         <div class="input-box">
-                            <input type="text" name="" placeholder="Product name" required="">
+                            <input type="text" name="" placeholder="Product name" required="" id="product">
                         </div>
                         <div class="input-box">
-                            <input type="text" name="" placeholder="Unit Price" required="">
+                            <input type="text" name="" placeholder="Unit Price" required="" id="unit_price">
                         </div>
                         <div class="input-box">
-                            <input type="text" name="" placeholder="Quantity" required="">
+                            <input type="text" name="" placeholder="Quantity" required="" id="quantity">
                         </div>
                         <div class="input-box">
                                 <select name="category">
@@ -82,5 +82,6 @@
         </footer>
 
     </main>
+    <script src="./static/js/crud_ops.js"></script>
 </body>
 </html>
